Bug 1688899 - Avoid painting artifacts in fractionally-positioned menupopups by treating the invalid region as being relative to the widget. r=tnikkel

Differential Revision: https://phabricator.services.mozilla.com/D103840